# py-toolbox-launcher

./: LICENSE  README.md  pyproject.toml  shell.nix
assets/: create_logo.sh
cmd/: cli.py
py_toolbox_launcher/: __init__.py  tbl_logging.py
scripts/: build_linux.sh  build_windows.ps1  pyinstaller.py
toolbox/: ToolBox2.bat
toolbox/Linux/: toolbox-1.sh  toolbox-2.sh
